# test_suite

./: .gitignore  README.md  pyproject.toml  pytest.ini  report.html  requirements.txt  requires_assignment.txt  results.xml  todo.md
.github/workflows/: run_api_tests.yaml  run_tests.yaml  run_web_tests.yaml
api_tests/: test_users.py
tests/: conftest.py  test.py
tests_api/: conftest.py
tests_thelab/: conftest.py  test_speed_game.py
tests_thelab/features/: speed_game.feature
tests_thelab/step_defs/: conftest.py  test_speed_game.py
tests_web/: conftest.py  test_assignment.py  test_basic.py  test_bugeater.py
